# professor-wiggum

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Harness_Configuration_Flowchart.html  LEADERBOARD.md  LICENSE  README.md  SETUP.md  SOUL.md  main.py  pyproject.toml  requirements.txt  setup.sh
.github/: pull_request_template.md
curriculum/: course.yaml
data/: evaluation_traces.json  visualize_reactions.py
docs/: curriculum_operations.md  cursor_remote_bootstrap.md  harness_cookbook.md  history_and_reproducibility.md  mechanism_move_notation.md  model_asset_overrides.md
mechanistic_agent/: __init__.py  config.py  curriculum.py  display.py  evaluation_store.py  flower_curriculum.py  flower_rendering.py  input_converter.py  llm.py  model_pricing.json  model_registry.py  prompt_assets.py  prompt_trace_validator.py  run_evaluator.py  scoring.py  smiles_utils.py  system_prompt.py  tool_schemas.py  tools.py
memory_packs/: default_memory.md  reagent_heuristics.json
scripts/: build_flower_holdout_leaderboard_set.py  build_flower_mechanism_dataset.py  build_human_benchmark_evals.py  build_humanbenchmark_legacy_evals.py  build_rxn_map_expanded.py  capture_harness_mermaid.py  convert_training_data.py  evolve_harness.py  generate_harness_flowchart_html.py  generate_harness_flowchart_png.js  migrate_prompt_versions.py  migrate_traces_to_files.py  pre_release_verification.py  render_flower_mechanism_pngs.py  render_rxn_map_pngs.py  validate_agents_md.py  validate_pr_model_strategy.py  validate_prompt_trace_evidence.py
(+113 files in other folders)
