[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mechanistic-agent"
version = "0.1.0"
description = "Local-first reaction mechanism runtime leveraging RDKit and Dimorphite-DL."
readme = "README.md"
authors = [{name = "Mechanistic Team"}]
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "rich>=13.0.0",
    "openai>=1.40.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
chemistry = [
    "rdkit-pypi>=2022.9.5",
    "dimorphite-dl>=1.3.1",
]

[project.scripts]
mechanistic-agent = "main:app"

[project.urls]
Repository = "https://github.com/scottreed/Mechanistic"

[tool.setuptools.packages.find]
include = ["mechanistic_agent*"]

[tool.typer]
pretty_exceptions_show_locals = false

[tool.pytest.ini_options]
markers = [
    "llm: marks tests that make real LLM API calls (deselect with -m 'not llm')",
]

[tool.ruff]
line-length = 100
